# soap-core

./: .gitignore  README.md  pyproject.toml
docs/: CURRENT_STATUS.md  PROJECT_OVERVIEW.md  butler_workflow.md  research_landscape.md  v0.3_implementation.md  v0.4_implementation.md  v0.5_implementation.md  v0.6_enhanced_observation_benchmark.md  v0.6_real_training_log_schema.md  v0.6_realish_benchmark.md  v0.6_torch_training_benchmark.md  v0.6_training_adapter.md  v0.6_training_benchmark.md  v0.7.3_multilayer_representation_benchmark.md  v0.7.4_calibration_report.md  v0.7.4_experiment_spec.md  v0.7.4_hf_multilayer_benchmark.md  v0.7.5_calibration_report.md  v0.7.5_experiment_spec.md  v0.7.5_phase_aware_benchmark.md  v0.7.6_classcond_geometry_benchmark.md  v0.7.6_experiment_spec.md  v0.7_representation_adapter.md  v0.7_representation_geometry_benchmark.md  v0.7_representation_schema.md
examples/: _classcond_analysis.txt  cc_seed42_condition_b.csv  cc_seed42_normal.csv  cc_seed43_condition_b.csv  cc_seed43_normal.csv  cc_seed44_condition_b.csv  cc_seed44_normal.csv  cc_seed45_condition_b.csv  cc_seed45_normal.csv  cc_seed46_condition_b.csv  cc_seed46_normal.csv  cc_seed47_condition_b.csv  cc_seed47_normal.csv  cc_seed48_normal.csv  cc_seed49_normal.csv  cc_seed50_normal.csv  cc_seed51_normal.csv  cc_seed52_normal.csv  cc_seed53_normal.csv  cc_seed54_normal.csv  cc_seed55_normal.csv  cc_seed56_normal.csv  cc_seed57_normal.csv  cc_seed58_normal.csv  cc_seed59_normal.csv  cc_seed60_normal.csv  cc_seed61_normal.csv  cc_seed62_normal.csv  cc_seed63_normal.csv  (+72 more)
soap/: cli.py  (+1 more)
(+54 files in other folders)
