[project]
name = "soap-core"
version = "0.1.0"
description = "Domain-agnostic engine for optimal effective dimension discovery and attractor prediction."
requires-python = ">=3.10"
authors = [{ name = "Independent Researcher" }]
dependencies = []

[project.optional-dependencies]
science = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["soap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
